--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turing Machine Simulator</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <header>
@@ -67,5 +67,17 @@
     </main>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+    <footer>
+        <div class="copyright">
+            <span>&copy; 2025</span>
+            Turing Machine Simulator by 
+            <a href="https://github.com/Reza-namvaran">Reza Namvaran</a>
+            <span>| All Rights Reserved</span>
+        </div>
+        <div class="additional-info">
+            <p>This software is provided for educational purposes only.</p>
+        </div>
+    </footer>
 </body>
 </html>
